// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/diff/index 1`] = `
"<view class="page">
  <view class="title">Diff</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <view class="hidden">count: {{state.count}}</view>
  <view class="hidden">nested: {{state.nested.value}}</view>
  <view class="hidden">list: {{state.list}}</view>
  <view class="hidden">skip: {{state.skip.secret}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/diff/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/hmr/index 1`] = `
"<view class="page">
  <view class="title">HMR</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/hmr/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/reactivity/index 1`] = `
"<view class="page">
  <view class="title">Reactivity</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/reactivity/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/runtime/index 1`] = `
"<view class="page">
  <view class="title">Runtime</view>
  <view id="runtime-ref" class="ref-target">template-ref</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <x-child id="child" title="{{childTitle}}" count="{{childCount}}" extra="yes">
    <view slot="header">header slot</view>
    <view>default slot</view>
  </x-child>
  <x-model id="model" modelValue="{{form.title}}" label="model" />
  <x-compat id="compat" />
  <x-scoped id="scoped" />
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/runtime/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin: 12rpx 0;
}
.ref-target {
  padding: 8rpx;
  margin-bottom: 12rpx;
  background: #f5f5f5;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/store/index 1`] = `
"<view class="page">
  <view class="title">Store</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/store/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/store-share/index 1`] = `
"<view class="page">
  <view class="title">Store Share</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots alipay outputs > wevu-runtime::alipay::pages/store-share/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/diff/index 1`] = `
"<view class="page">
  <view class="title">Diff</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <view class="hidden">count: {{state.count}}</view>
  <view class="hidden">nested: {{state.nested.value}}</view>
  <view class="hidden">list: {{state.list}}</view>
  <view class="hidden">skip: {{state.skip.secret}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/diff/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/hmr/index 1`] = `
"<view class="page">
  <view class="title">HMR</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/hmr/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/reactivity/index 1`] = `
"<view class="page">
  <view class="title">Reactivity</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/reactivity/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/runtime/index 1`] = `
"<view class="page">
  <view class="title">Runtime</view>
  <view id="runtime-ref" class="ref-target">template-ref</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <x-child id="child" title="{{childTitle}}" count="{{childCount}}" extra="yes">
    <view slot="header">header slot</view>
    <view>default slot</view>
  </x-child>
  <x-model id="model" modelValue="{{form.title}}" label="model" />
  <x-compat id="compat" />
  <x-scoped id="scoped" />
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/runtime/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin: 12rpx 0;
}
.ref-target {
  padding: 8rpx;
  margin-bottom: 12rpx;
  background: #f5f5f5;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/store/index 1`] = `
"<view class="page">
  <view class="title">Store</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/store/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/store-share/index 1`] = `
"<view class="page">
  <view class="title">Store Share</view>
  <view class="summary">ok: {{__e2e.ok}}</view>
  <text class="details" selectable>{{__e2eText}}</text>
</view>
"
`;

exports[`wevu runtime platform outputs > builds and snapshots tt outputs > wevu-runtime::tt::pages/store-share/index.style 1`] = `
".page {
  padding: 24rpx;
}
.title {
  margin-bottom: 16rpx;
  font-weight: 600;
}
.summary {
  margin-bottom: 12rpx;
}
.details {
  font-size: 22rpx;
  white-space: pre-wrap;
}
/*$vite$:1*/
"
`;
